--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <h1> Thays </h1><br>
-<h3> Sistemas Distribuidos </h3>
+<h3> Sistemas Distribuidos </h3><br>
+<h2> Ciência da Computacao </h2>
 
 </html>
